--- a/hello.html
+++ b/hello.html
@@ -3,12 +3,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello!</title>
+	<style>
+		h1 {
+			color: skyblue;
+		}
+	</style>
 </head>
 <body>
-	<h1 style ="color:blue;"> Welcome to my website!!</h1>
+	<h1 > Welcome to my website!!</h1>
 	<h2>hello example</h2>
 	Hello, world!
 </body>
